tekton/authz/gitlab-listener.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: el-gitlab-listener-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /authz
            pathType: Prefix
            backend:
              service:
                name: authz-gitlab-listener
                port:
                  number: 8080
